--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 
 v1.7
 - The usage of stashes is now getting updated correctly
+- Added autostart support for GrimCam
 
 v1.6
 - Text align of column ID is now left (makes it easer to read the names)
