Feature: reerange stashes by drag&drop

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 
 v1.8
 - New feature: To import transfer files drag and drop them directly onto the window
+- New feature: Reerange stashes (change order of stashes) by using drag & drop
+- Added mutex to allow only one running instance of GDMultiStash at a time
 
 v1.7
 - The usage of stashes is now getting updated correctly
