--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 
+v1.9
+- Added Version check + Updater
+- Updated localization
+    +label_check_for_new_version
+    +label_auto_update_version
+
 v1.8
 - New feature: To import transfer files drag and drop them directly onto the window
 - New feature: Reerange stashes (change order of stashes) by using drag & drop
