--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 
+v1.10
+- Now Stash will be switched to main only when whole ingame stash window closed
+- Updated whole overlay list system
+
 v1.9
 - Added Version check + Updater
 - Fixed dragging of stashes that got both sc and hc checked
