--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 
+v1.12
+- Update check is now once per hour and no more once per day
+- Added Chinese translation (by tt300)
+- The GDMultiStash window can now be resized
+- Updates localization system: Now only 4 letter codes are allowed (enUS/enGB/deDE/zhCN/...)
+- Added translation file for enGB
+- Localization:
+    +column_expansion
+    +column_softcore
+    +column_hardcore
+
 v1.11
 - Added drop down for colors in listview cell edit mode
 - Added support for multi mode stashes (SC+HC)
