--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 
+v1.17
+- All hooks are now getting reinstalled when Grim Dawn has been restarted
+- Added option to show/hide columns (right click listview header to show the menu)
+- Minor improvements and bug fixes
+
 v1.16
 - Improved text readability
 - Stash list in overlay window can now be scrolled by wheel (beta, camera will still zoom)
