--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,10 @@
 
+v1.21
+- Added more debug messages to the overlay system
+
 v1.20
 - Still hunting the bug thats corrupting stashes while switching
-- Changed count of tries of sending interact key to 4 times with timeout of 500m (4x500ms=2sec)
+- Changed count of tries of sending interact key to 4 times with timeout of 500ms (4x500ms=2sec)
 
 v1.19
 - Switching stashes is now a little bit slower to prevent stash corruption
