--- a/GDMultiStash/Properties/Resources.resx
+++ b/GDMultiStash/Properties/Resources.resx
@@ -175,4 +175,19 @@
   <data name="scrollbar_top" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\scrollbar_top.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ReloadButtonSmallDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ReloadButtonSmallDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ReloadButtonSmallOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ReloadButtonSmallOver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ReloadButtonSmallUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ReloadButtonSmallUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lockBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lockBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lockWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lockWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
