--- a/GDMultiStashApp/Properties/Resources.resx
+++ b/GDMultiStashApp/Properties/Resources.resx
@@ -142,12 +142,6 @@
   <data name="font_LinBiolinum_RB" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\font_LinBiolinum_RB.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="radio0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\radio0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="radio1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\radio1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="local_zhCN" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\local_zhCN.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
@@ -286,7 +280,7 @@
   <data name="ButtonLargeOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ButtonLargeOver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="buttonLargeUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="ButtonLargeUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\buttonLargeUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="soundButtonOverTick" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -354,5 +348,17 @@
   </data>
   <data name="HomeIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HomeIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ButtonRoundDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ButtonRoundDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ButtonRoundDownOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ButtonRoundDownOver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ButtonRoundOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ButtonRoundOver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ButtonRoundUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ButtonRoundUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
